smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control/control-with-no-colon.smithy
// Syntax error at line 2, column 10: Expected COLON(':') but found STRING('"1.0"') | Model
$version "1.0"
